SERVER-10927 RS hosts drop temp collections on promotion to master

Non-replicated hosts still drop temp collections on startup. This is
inappropriate for replica set members (and pure slaves) since it can lead to
discrepancies between hosts.